tests/snapshots/approved__output_from_release_branch.snap
---
source: tests/approved.rs
info:
  program: git-versioner
  args: []
---
success: true
exit_code: 0
----- stdout -----
{
  "Major": 0,
  "Minor": 1,
  "Patch": 0,
  "PreReleaseTag": "pre.2",
  "PreReleaseTagWithDash": "-pre.2",
  "PreReleaseLabel": "pre",
  "PreReleaseLabelWithDash": "-pre",
  "PreReleaseNumber": 2,
  "WeightedPreReleaseNumber": 55002,
  "BuildMetadata": "",
  "FullBuildMetaData": "",
  "MajorMinorPatch": "0.1.0",
  "SemVer": "0.1.0-pre.2",
  "AssemblySemVer": "0.1.0.0",
  "AssemblySemFileVer": "0.1.0.55002",
  "InformationalVersion": "0.1.0-pre.2",
  "FullSemVer": "0.1.0-pre.2",
  "BranchName": "release/0.1.0",
  "EscapedBranchName": "release-0-1-0",
  "Sha": "########################################",
  "ShortSha": "#######",
  "VersionSourceSha": "",
  "MajorMinorPatchVersionSourceSha": "",
  "CommitsSinceVersionSource": 0,
  "CommitDate": "2024-03-09",
  "CommitYear": "2024",
  "CommitMonth": "03",
  "CommitDay": "09",
  "YearMinor": 1,
  "UncommittedChanges": 0
}

----- stderr -----
