tests/snapshots/approved__output_from_tag.snap
---
source: tests/cli_no_configuration.rs
info:
  program: git-versioner
  args: []
---
success: true
exit_code: 0
----- stdout -----
{
  "Major": 0,
  "Minor": 1,
  "Patch": 0,
  "PreReleaseTag": "",
  "PreReleaseTagWithDash": "",
  "PreReleaseLabel": "",
  "PreReleaseLabelWithDash": "",
  "PreReleaseNumber": 0,
  "WeightedPreReleaseNumber": 60000,
  "BuildMetadata": "",
  "FullBuildMetaData": "",
  "MajorMinorPatch": "0.1.0",
  "SemVer": "0.1.0",
  "AssemblySemVer": "0.1.0.0",
  "AssemblySemFileVer": "0.1.0.60000",
  "InformationalVersion": "0.1.0",
  "FullSemVer": "0.1.0",
  "BranchName": "trunk",
  "EscapedBranchName": "trunk",
  "Sha": "########################################",
  "ShortSha": "#######",
  "VersionSourceSha": "########################################",
  "CommitsSinceVersionSource": 0,
  "CommitDate": "2024-03-09",
  "CommitYear": "2024",
  "CommitMonth": "03",
  "CommitDay": "09",
  "YearMinor": 1,
  "UncommittedChanges": 0
}

----- stderr -----
